cluster/apps/tools/snapdrop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapdrop-dashboard
  namespace: tools

  annotations:
    hajimari.io/appName: "snapdrop"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/group: tools

    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-no-auth@kubernetescrd"

spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "snapdrop.${SECRET_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snapdrop
                port:
                  number: 9090
